using System;

namespace ThanhDV.GameSaver.Core
{
    /// <summary>
    /// A secure, read-only wrapper around <see cref="GameSaverOperationInternal"/>.
    /// Used to expose operation states to public APIs without allowing external modification.
    /// </summary>
    public struct GameSaverOperationHandle
    {
        internal GameSaverOperationInternal m_InternalOp;

        internal GameSaverOperationHandle(GameSaverOperationInternal internalOp)
        {
            m_InternalOp = internalOp;
        }

        /// <summary>
        /// True if the operation is null or has finished executing.
        /// </summary>
        public readonly bool IsDone => m_InternalOp == null || m_InternalOp.IsDone;
        
        /// <summary>
        /// The current status. Defaults to Succeeded if the internal operation is null.
        /// </summary>
        public readonly GameSaverOperationStatus Status => m_InternalOp?.Status ?? GameSaverOperationStatus.Succeeded;
        
        /// <summary>
        /// The progress of the operation, from 0.0 to 1.0.
        /// </summary>
        public readonly float PercentComplete => m_InternalOp?.PercentComplete ?? 1f;
        
        /// <summary>
        /// The registered error of the operation, if any.
        /// </summary>
        public readonly Exception Error => m_InternalOp?.Error;

        /// <summary>
        /// Subscribe to receive a callback when the operation finishes.
        /// If the operation is already done, the callback is invoked immediately.
        /// </summary>
        public event Action<GameSaverOperationHandle> Completed
        {
            add
            {
                if (m_InternalOp != null && !m_InternalOp.IsDone) 
                {
                    m_InternalOp.Completed += value;
                }
                else 
                {
                    // If the operation is already finished (or null), guarantee the callback executes right away.
                    value?.Invoke(this);
                }
            }
            remove
            {
                if (m_InternalOp != null) m_InternalOp.Completed -= value;
            }
        }

        /// <summary>
        /// Allows the handle to be awaited using the `await` keyword.
        /// </summary>
        public readonly GameSaverAwaiter GetAwaiter()
        {
            return new GameSaverAwaiter(this);
        }
    }

    /// <summary>
    /// A secure, read-only wrapper around <see cref="GameSaverOperationInternal{T}"/>.
    /// Exposes operation states and results to public APIs safely.
    /// </summary>
    /// <typeparam name="T">The type of the expected result.</typeparam>
    public struct GameSaverOperationHandle<T>
    {
        internal GameSaverOperationInternal<T> m_InternalOp;

        internal GameSaverOperationHandle(GameSaverOperationInternal<T> internalOp)
        {
            m_InternalOp = internalOp;
        }

        public readonly bool IsDone => m_InternalOp == null || m_InternalOp.IsDone;
        public readonly GameSaverOperationStatus Status => m_InternalOp?.Status ?? GameSaverOperationStatus.Succeeded;
        public readonly float PercentComplete => m_InternalOp?.PercentComplete ?? 1f;
        public readonly Exception Error => m_InternalOp?.Error;
        
        /// <summary>
        /// The final result generated by the operation. Returns default if incomplete or failed.
        /// </summary>
        public readonly T Result => m_InternalOp != null ? m_InternalOp.Result : default;

        /// <summary>
        /// Subscribe to receive a callback when the operation finishes.
        /// If the operation is already done, the callback is invoked immediately.
        /// </summary>
        public event Action<GameSaverOperationHandle<T>> Completed
        {
            add
            {
                if (m_InternalOp != null && !m_InternalOp.IsDone)
                {
                    m_InternalOp.Completed += value;
                }
                else
                {
                    // Guarantee execution if the subscription happens post-completion.
                    value?.Invoke(this);
                }
            }
            remove
            {
                if (m_InternalOp != null) m_InternalOp.Completed -= value;
            }
        }

        /// <summary>
        /// Allows the handle to be awaited using the `await` keyword.
        /// </summary>
        public readonly GameSaverAwaiter<T> GetAwaiter()
        {
            return new GameSaverAwaiter<T>(this);
        }
    }
}
